Replace result sort with codomain sort in \Pi-types